# CASIO-Python-Scripts

./: .gitignore  .replit  README.md  convert.tiff  frame1.tiff  frame3.tiff  geolib-release.sh  geolibdev.py  image-convert.py  image-driver-release.sh  imagedriverdev.py  pyproject.toml  requirements.txt
archived/: ccitt-driver-release.sh  ccittconvert.py  convert.py  imageDisplay.py  infinite.py  text.py  textDisplay.py
archived/ccitt_new/: ccittconvert.py  ccittdriverdev.py
ccitt/: bitbuffer.py  ccitt-driver-release.sh  ccittcodes.py  ccittconvert.py  ccittdecoder.py  ccittdriverdev.py  ccittmodes.py  ccittrelease.py  frame.tiff  image.py  modecodes.py
ccitt_new/: bitbuffer.py  ccittcodes.py  ccittdecoder.py  ccittdriverdev.py  ccittmodes.py  modecodes.py
images/: frame2.tiff  frame4.tiff
releases/: geolib.py  imagedriver.py  images.py
